<resources>
    <string name="app_name">Radio Player</string>
    <string name="station_name_label">Name:</string>
    <string name="station_url_label">URL:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_radio">Radio</string>
    <string name="nav_manager">Station manager</string>
    <string name="action_add_station">Add</string>

    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="station_subname_label">Subname</string>
    <string name="btn_update">Update</string>
    <string name="toolbar_edit_station">Edit station</string>
    <string name="btn_add">Add</string>
    <string name="toolbar_create_station">Create station</string>
</resources>
