<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/playback_controls"
        android:background="@android:color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.cardview.widget.CardView
        android:id="@+id/playback_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/playback_controls_padding">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@+id/btnPrev"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/currently_playing_song"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/currently_playing_artist"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/play_pause"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_pause"
                android:padding="8dp"
                android:src="@drawable/ic_skip_previous"
                android:tintMode="src_in"
                app:tint="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/play_pause"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="8dp"
                android:layout_toStartOf="@+id/btnNext"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_pause"
                android:padding="8dp"
                android:src="@drawable/ic_play_arrow_36"
                android:tintMode="src_in"
                app:tint="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_pause"
                android:padding="8dp"
                android:src="@drawable/ic_skip_next"
                android:tintMode="src_in"
                app:tint="@color/colorPrimary" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>